[package]
name = "alluka_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alluka_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
features = ["extension-module"]
version = "0.16.5"

[dependencies.pyo3-anyio]
# version = "0.2.0"
git = "https://github.com/fasterspeeding/pyo3-anyio"
branch = "task/args-pyany"

[dependencies.tokio]
features = ["sync"]
version = "1.19.2"

[profile.release]
codegen-units = 1
lto = true
strip = true
