[package]
name = "alluka_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alluka_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
features = ["extension-module"]
version = "0.16.6"

[dependencies.pyo3-anyio]
# version = "0.2.0"
git = "https://github.com/fasterspeeding/pyo3-anyio"
rev = "ae2237e17ba6f495dfc3502bfa83dc20c62e0b18"

[dependencies.tokio]
features = ["sync"]
version = "1.20.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
